--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.navigation:navigation-compose:2.4.0-alpha06'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation "io.coil-kt:coil-svg:1.3.2"
     implementation 'androidx.activity:activity-compose:1.7.0'
