--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ android {
 }
 
 dependencies {
-
+    implementation "com.airbnb.android:lottie-compose:6.0.0"
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.navigation:navigation-compose:2.5.3'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
