--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,12 +47,13 @@ android {
 }
 
 dependencies {
+    implementation("androidx.compose.runtime:runtime-livedata:1.4.3")
     implementation "com.airbnb.android:lottie-compose:6.0.0"
-    implementation 'androidx.core:core-ktx:1.10.0'
-    implementation 'androidx.navigation:navigation-compose:2.5.3'
+    implementation 'androidx.core:core-ktx:1.10.1'
+    implementation 'androidx.navigation:navigation-compose:2.6.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation "io.coil-kt:coil-svg:1.3.2"
-    implementation 'androidx.activity:activity-compose:1.7.1'
+    implementation 'androidx.activity:activity-compose:1.7.2'
     implementation("io.coil-kt:coil-compose:2.3.0")
     implementation platform('androidx.compose:compose-bom:2022.10.00')
     implementation 'androidx.compose.ui:ui'
